# open.mp

./: .gitignore  .gitmodules  CMakeLists.txt
Server/Components/Console/: console_impl.hpp
Server/Source/: core_impl.hpp  server.cpp
lib/: CMakeLists.txt
scripts/: build_android.sh  build_deps_android.sh
